# docs/swagger.json
@@ -79,6 +79,35 @@
                 }
             }
         },
+        "/logout": {
+            "post": {
+                "description": "Удаляет токен и завершает сессию пользователя",
+                "tags": [
+                    "Авторизация"
+                ],
+                "summary": "Выход из системы",
+                "responses": {
+                    "200": {
+                        "description": "Успешный выход",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Неверный запрос",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/tasks": {
             "get": {
                 "description": "Возвращает список всех задач из базы данных",
